default/objects/Trigger__mdt/fields/After__c.field-meta.xml
<CustomField>
    <fullName>After__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After</label>
    <type>Checkbox</type>
</CustomField>