default/objects/Trigger__mdt/fields/Before__c.field-meta.xml
<CustomField>
    <fullName>Before__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Before</label>
    <type>Checkbox</type>
</CustomField>