default/objects/Trigger__mdt/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>