default/objects/Trigger__mdt/fields/Insert__c.field-meta.xml
<CustomField>
    <fullName>Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Insert</label>
    <type>Checkbox</type>
</CustomField>