default/objects/Trigger__mdt/fields/Undelete__c.field-meta.xml
<CustomField>
    <fullName>Undelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Undelete</label>
    <type>Checkbox</type>
</CustomField>