default/objects/Trigger__mdt/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>